--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "node-restful": "^0.2.6",
+    "node-rest-client": "^3.1.0",
     "nodemon": "^2.0.2",
     "npm": "^6.13.6",
     "pubnub": "^4.27.3",
